RESOLVED FIXED131880
Contents of directly composited image layers are sometimes missing
https://bugs.webkit.org/show_bug.cgi?id=131880
Summary Contents of directly composited image layers are sometimes missing
Simon Fraser (smfr)
Reported 2014-04-18 21:45:32 PDT
Contents of directly composited image layers are sometimes missing
Attachments
Patch (11.44 KB, patch)
2014-04-18 21:48 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2014-04-18 21:46:07 PDT
Simon Fraser (smfr)
Comment 2 2014-04-18 21:48:49 PDT
Tim Horton
Comment 3 2014-04-18 21:55:12 PDT
Comment on attachment 229716 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=229716&action=review > LayoutTests/compositing/images/update-content-rect-expected.html:11 > + -webkit-transform: translateZ(0); indentation > LayoutTests/compositing/images/update-content-rect.html:6 > + -webkit-transform: translateZ(0); ditto
WebKit Commit Bot
Comment 4 2014-04-18 22:32:07 PDT
Comment on attachment 229716 [details] Patch Clearing flags on attachment: 229716 Committed r167529: <http://trac.webkit.org/changeset/167529>
WebKit Commit Bot
Comment 5 2014-04-18 22:32:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.