Source/WebCore/platform/graphics/GraphicsLayer.h
@@ -408,7 +408,7 @@ public:
     // FIXME: webkit.org/b/109658
     // Should unify setContentsToMedia and setContentsToCanvas
     virtual void setContentsToPlatformLayer(PlatformLayer* layer) { setContentsToMedia(layer); }
-    virtual bool hasContentsLayer() const { return false; }
+    virtual bool usesContentsLayer() const { return false; }
 
     // Callback from the underlying graphics system to draw layer contents.
     void paintGraphicsLayerContents(GraphicsContext&, const FloatRect& clip);
